--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -36,7 +36,7 @@
     position:relative;
     margin:0 auto;
                /*replace 900px with your width*/
-    width:900px;
+    width:auto;
     text-align: center;
   }
 
